--- a/Index.html
+++ b/Index.html
@@ -20,6 +20,7 @@
     window.onload = function() {
         // GenerateMap();
         // GenerateMap2();
+        generateCards();
 
 
     }
@@ -52,7 +53,7 @@
             </canvas>
         </div>
         <div class="col-sm-2">
-            <canvas id="card5" class="CardBack">
+            <canvas id="card5" >
                 Your browser does not support the HTML5 canvas tag.
             </canvas>
         </div>
